# USB_to_JTAG

./: README.md  dirtyJtag.uf2  output.txt  output_1.txt  pico_mpsse.uf2
firmware/: CMakeLists.txt  bitstream.h  cmd.c  dirtyJtag.c  dirtyJtagConfig.h
fpga_code/: main.v  top.v
pico-dirtyJtag-master/: CMakeLists.txt  README.md  bitstream.h  cmd.c  cmd.h  default.nix  dirtyJtag.c  dirtyJtagConfig.h  flake.nix  jtag.pio  shell.nix  tusb_config.h  usb_descriptors.c
pico-dirtyJtag-master/firmware/: CMakeLists.txt  cmd.c  dirtyJtag.c  dirtyJtagConfig.h  pio_jtag.c  tusb_config.h  usb_descriptors.c
pico-dirtyJtag-master/software/: dirtyjtag.cfg  script_test.py
pico_mpsse/: .gitignore  CMakeLists.txt  README.md  config.h  jtag.pio  pico_mpsse.c  pico_mpsse.h  pio_jtag.c  pio_jtag.h  usb_common.h
software/: dirtyjtag.cfg  flash_fpga.py  script_test.py
usb_jtag_gateway/: live_viewer.py  serial_gateway.cfg  test_stream.txt
usb_jtag_gateway/pico_ft232_emulator/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
